--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,25 +27,25 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
-  auto_size_text: 3.0.0
-  cached_network_image: 3.1.0+1
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
+  auto_size_text: ^3.0.0
+  bloc: ^8.0.1
+  cached_network_image: ^3.2.0
+  cupertino_icons: ^1.0.4
   flutter:
     sdk: flutter
-  font_awesome_flutter: 8.11.0
-  google_fonts: 2.1.0
-  intl: 0.17.0
-  json_path: 0.2.1
-  page_transition: 2.0.4
-  timeago: 3.1.0
-  url_launcher: 6.0.15
+  flutter_bloc: ^8.0.0
+  font_awesome_flutter: ^9.2.0
+  google_fonts: ^2.1.0
+  intl: ^0.17.0
+  json_path: ^0.3.0
+  lottie: ^1.2.1
+  page_transition: ^2.0.4
+  timeago: ^3.1.0
+  url_launcher: ^6.0.17
 
 dev_dependencies:
   flutter_launcher_icons: ^0.9.2
-  flutter_lints: ^1.0.0
+  flutter_lints: ^1.0.4
   flutter_test:
     sdk: flutter
 
@@ -80,7 +80,6 @@ flutter:
           style: italic
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
-
 flutter_icons:
   android: "launcher_icon"
   ios: true
